# jamini_app_oboe

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/dhitsolutions/jamini/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/dhitsolutions/oboe_test/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: SongDB.json
app/src/main/assets/beats/34/: swing_1.json  swing_2.json
app/src/main/assets/beats/44/: hop_1.json  swing.json  swing_fill_1.json
app/src/main/assets/drums/becken/: files.json
app/src/main/assets/drums/hihat/: files.json
app/src/main/assets/drums/kick/: files.json
app/src/main/assets/drums/ohh_pedal/: files.json
app/src/main/assets/drums/openhihat/: files.json  files_to_json.bat
app/src/main/assets/drums/ride/: files.json
app/src/main/assets/drums/shaker2/: files.json
app/src/main/assets/drums/snare/: files.json
app/src/main/assets/drums/tom_h/: files.json
app/src/main/assets/drums/tom_l/: files.json
app/src/main/assets/drums/tom_m/: files.json
app/src/main/cpp/: CMakeLists.txt  MidiManager.cpp  MidiManager.h  NativePlayer.cpp  NativePlayer.h  SynthManager.cpp  SynthManager.h  native_player_jni.cpp  wavplayer.cpp
app/src/main/java/com/dhitsolutions/jamini/: MainActivity.kt
app/src/main/java/com/dhitsolutions/oboe_test/: MainActivity.kt  (+1 more)
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+7 files in other folders)
